# data-engineering-capstone

./: .gitignore  LICENSE  README.md  docker-compose.yml  motorcycle_helmet_laws_20250902.csv  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
airflow/airflow_dags/: api_ingestion_dag.py  duckdb_ingest_dag.py  duckdb_transformation_dag.py  ftp_ingestion_dag.py  full_pipeline_dag.py  webscraping_dag.py
data/: duckdb_ingest.py  duckdb_setup.py  duckdb_transformation.py
data/sql/: analysis_accident.sql  analysis_crashrf.sql  analysis_damage.sql  analysis_distract.sql  analysis_drimpair.sql  analysis_driverrrf.sql  analysis_drugs.sql  analysis_factor.sql  analysis_maneuver.sql  analysis_miacc.sql  analysis_midrvacc.sql  analysis_miper.sql  analysis_motorcycle_helmet_laws.sql  analysis_nmcrash.sql  analysis_nmdistract.sql  analysis_nmimpair.sql  analysis_nmprior.sql  analysis_parkwork.sql  analysis_pbtype.sql  analysis_person.sql  analysis_pvehiclesf.sql  analysis_race.sql  analysis_vehicle.sql  analysis_vevent.sql  analysis_vision.sql  analysis_vsoe.sql  analysis_weather.sql  silver.cevent.sql  silver_accident.sql  silver_crashrf.sql  silver_damage.sql  silver_distract.sql  silver_drimpair.sql  silver_driverrrf.sql  silver_drugs.sql  silver_factor.sql  silver_maneuver.sql  silver_miacc.sql  silver_midrvacc.sql  silver_miper.sql  (+21 more)
src/: api_ingestion.py  ftp_ingestion.py  html_scrap.py
src/utils/: http_utils.py  (+2 more)
tests/: test_api_ingestion.py  test_ftp_ingestion.py  test_html_scrap.py  test_http_utils.py  test_logger.py  test_minio_client.py
(+83 files in other folders)
